# peak-prophet-server

./: Dockerfile  README.md  pyproject.toml  run.py  run_server.sh
peak_prophet_server/: __init__.py  data_reader.py  fitting.py  pattern.py  sessions.py  sio_events.py  util.py
tests/: test_data_reader.py  test_fitting.py
