[tool.poetry]
name = "peak-prophet-server"
version = "0.1.0"
description = ""
authors = ["Clemens Prescher <clemens.prescher@gmail.com>"]
readme = "README.md"
packages = [{include = "peak_prophet_server"}]

[tool.poetry.dependencies]
python = "^3.9"
flask-socketio = "^5.3.2"
sanic = "^22.12.0"
python-socketio = "^5.7.2"
lmfit = "^1.1.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
